Updating files for mobile

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <!-- app styles  -->
     <link href="public/css/styles.css" rel="stylesheet">
 
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0"/>
+
   </head>
 
   <body>
