Shortening instruction further

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="instruction-text">
-        <p>Pick 3 bases below to translate codon to amino acid.</p>
+        <p>Pick 3 bases to translate codon to amino acid.</p>
       </div>
 
       <div class="container-builder">
